// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Failing create field metadata MULTI_SELECT tests suite v2 Create should fail with an invalid default value 1`] = `
[
  {
    "extensions": {
      "code": "METADATA_VALIDATION_FAILED",
      "errors": {
        "fieldMetadata": [
          {
            "errors": [
              {
                "code": "INVALID_FIELD_INPUT",
                "message": "Default value for multi-select must be an array got invalid",
                "userFriendlyMessage": "Multi-select field default value must be an array",
                "value": "invalid",
              },
            ],
            "flatEntityMinimalInformation": {
              "id": Any<String>,
              "name": "testField",
              "objectMetadataId": Any<String>,
              "universalIdentifier": Any<String>,
            },
            "metadataName": "fieldMetadata",
            "status": "fail",
            "type": "create",
          },
        ],
      },
      "message": "Validation failed for 1 fieldMetadata",
      "summary": {
        "fieldMetadata": 1,
        "totalErrors": 1,
      },
      "userFriendlyMessage": "Metadata validation failed",
    },
    "message": "Multiple validation errors occurred while creating fields",
    "name": "GraphQLError",
  },
]
`;

exports[`Failing create field metadata MULTI_SELECT tests suite v2 Create should fail with an unknown default value 1`] = `
[
  {
    "extensions": {
      "code": "METADATA_VALIDATION_FAILED",
      "errors": {
        "fieldMetadata": [
          {
            "errors": [
              {
                "code": "INVALID_FIELD_INPUT",
                "message": "Default value for multi-select must be an array got 'OPTION_424242'",
                "userFriendlyMessage": "Multi-select field default value must be an array",
                "value": "'OPTION_424242'",
              },
            ],
            "flatEntityMinimalInformation": {
              "id": Any<String>,
              "name": "testField",
              "objectMetadataId": Any<String>,
              "universalIdentifier": Any<String>,
            },
            "metadataName": "fieldMetadata",
            "status": "fail",
            "type": "create",
          },
        ],
      },
      "message": "Validation failed for 1 fieldMetadata",
      "summary": {
        "fieldMetadata": 1,
        "totalErrors": 1,
      },
      "userFriendlyMessage": "Metadata validation failed",
    },
    "message": "Multiple validation errors occurred while creating fields",
    "name": "GraphQLError",
  },
]
`;

exports[`Failing create field metadata MULTI_SELECT tests suite v2 Create should fail with comma in option label 1`] = `
[
  {
    "extensions": {
      "code": "METADATA_VALIDATION_FAILED",
      "errors": {
        "fieldMetadata": [
          {
            "errors": [
              {
                "code": "INVALID_FIELD_INPUT",
                "message": "Label must not contain a comma",
                "userFriendlyMessage": "Label must not contain a comma",
                "value": "Option ,1",
              },
            ],
            "flatEntityMinimalInformation": {
              "id": Any<String>,
              "name": "testField",
              "objectMetadataId": Any<String>,
              "universalIdentifier": Any<String>,
            },
            "metadataName": "fieldMetadata",
            "status": "fail",
            "type": "create",
          },
        ],
      },
      "message": "Validation failed for 1 fieldMetadata",
      "summary": {
        "fieldMetadata": 1,
        "totalErrors": 1,
      },
      "userFriendlyMessage": "Metadata validation failed",
    },
    "message": "Multiple validation errors occurred while creating fields",
    "name": "GraphQLError",
  },
]
`;

exports[`Failing create field metadata MULTI_SELECT tests suite v2 Create should fail with duplicated option ids 1`] = `
[
  {
    "extensions": {
      "code": "METADATA_VALIDATION_FAILED",
      "errors": {
        "fieldMetadata": [
          {
            "errors": [
              {
                "code": "INVALID_FIELD_INPUT",
                "message": "Duplicated option id",
                "userFriendlyMessage": "Duplicated option id",
                "value": [
                  {
                    "color": "green",
                    "id": Any<String>,
                    "label": "Option 1",
                    "position": 1,
                    "value": "OPTION_1",
                  },
                  {
                    "color": "green",
                    "id": Any<String>,
                    "label": "Option 2",
                    "position": 2,
                    "value": "OPTION_2",
                  },
                ],
              },
            ],
            "flatEntityMinimalInformation": {
              "id": Any<String>,
              "name": "testField",
              "objectMetadataId": Any<String>,
              "universalIdentifier": Any<String>,
            },
            "metadataName": "fieldMetadata",
            "status": "fail",
            "type": "create",
          },
        ],
      },
      "message": "Validation failed for 1 fieldMetadata",
      "summary": {
        "fieldMetadata": 1,
        "totalErrors": 1,
      },
      "userFriendlyMessage": "Metadata validation failed",
    },
    "message": "Multiple validation errors occurred while creating fields",
    "name": "GraphQLError",
  },
]
`;

exports[`Failing create field metadata MULTI_SELECT tests suite v2 Create should fail with duplicated option positions 1`] = `
[
  {
    "extensions": {
      "code": "METADATA_VALIDATION_FAILED",
      "errors": {
        "fieldMetadata": [
          {
            "errors": [
              {
                "code": "INVALID_FIELD_INPUT",
                "message": "Duplicated option position",
                "userFriendlyMessage": "Duplicated option position",
                "value": [
                  {
                    "color": "green",
                    "id": Any<String>,
                    "label": "Option 1",
                    "position": 1,
                    "value": "OPTION_1",
                  },
                  {
                    "color": "green",
                    "id": Any<String>,
                    "label": "Option 2",
                    "position": 1,
                    "value": "OPTION_2",
                  },
                ],
              },
            ],
            "flatEntityMinimalInformation": {
              "id": Any<String>,
              "name": "testField",
              "objectMetadataId": Any<String>,
              "universalIdentifier": Any<String>,
            },
            "metadataName": "fieldMetadata",
            "status": "fail",
            "type": "create",
          },
        ],
      },
      "message": "Validation failed for 1 fieldMetadata",
      "summary": {
        "fieldMetadata": 1,
        "totalErrors": 1,
      },
      "userFriendlyMessage": "Metadata validation failed",
    },
    "message": "Multiple validation errors occurred while creating fields",
    "name": "GraphQLError",
  },
]
`;

exports[`Failing create field metadata MULTI_SELECT tests suite v2 Create should fail with duplicated option values 1`] = `
[
  {
    "extensions": {
      "code": "METADATA_VALIDATION_FAILED",
      "errors": {
        "fieldMetadata": [
          {
            "errors": [
              {
                "code": "INVALID_FIELD_INPUT",
                "message": "Duplicated option value",
                "userFriendlyMessage": "Duplicated option value",
                "value": [
                  {
                    "color": "green",
                    "id": Any<String>,
                    "label": "Option 1",
                    "position": 0,
                    "value": "OPTION_1",
                  },
                  {
                    "color": "green",
                    "id": Any<String>,
                    "label": "Option 1",
                    "position": 1,
                    "value": "OPTION_1",
                  },
                ],
              },
            ],
            "flatEntityMinimalInformation": {
              "id": Any<String>,
              "name": "testField",
              "objectMetadataId": Any<String>,
              "universalIdentifier": Any<String>,
            },
            "metadataName": "fieldMetadata",
            "status": "fail",
            "type": "create",
          },
        ],
      },
      "message": "Validation failed for 1 fieldMetadata",
      "summary": {
        "fieldMetadata": 1,
        "totalErrors": 1,
      },
      "userFriendlyMessage": "Metadata validation failed",
    },
    "message": "Multiple validation errors occurred while creating fields",
    "name": "GraphQLError",
  },
]
`;

exports[`Failing create field metadata MULTI_SELECT tests suite v2 Create should fail with duplicated trimmed option values 1`] = `
[
  {
    "extensions": {
      "code": "METADATA_VALIDATION_FAILED",
      "errors": {
        "fieldMetadata": [
          {
            "errors": [
              {
                "code": "INVALID_FIELD_INPUT",
                "message": "Duplicated option value",
                "userFriendlyMessage": "Duplicated option value",
                "value": [
                  {
                    "color": "green",
                    "id": Any<String>,
                    "label": "Option 1",
                    "position": 1,
                    "value": "OPTION_1",
                  },
                  {
                    "color": "green",
                    "id": Any<String>,
                    "label": "Option 2",
                    "position": 2,
                    "value": "OPTION_1",
                  },
                ],
              },
            ],
            "flatEntityMinimalInformation": {
              "id": Any<String>,
              "name": "testField",
              "objectMetadataId": Any<String>,
              "universalIdentifier": Any<String>,
            },
            "metadataName": "fieldMetadata",
            "status": "fail",
            "type": "create",
          },
        ],
      },
      "message": "Validation failed for 1 fieldMetadata",
      "summary": {
        "fieldMetadata": 1,
        "totalErrors": 1,
      },
      "userFriendlyMessage": "Metadata validation failed",
    },
    "message": "Multiple validation errors occurred while creating fields",
    "name": "GraphQLError",
  },
]
`;

exports[`Failing create field metadata MULTI_SELECT tests suite v2 Create should fail with empty multi-select default values array 1`] = `
[
  {
    "extensions": {
      "code": "METADATA_VALIDATION_FAILED",
      "errors": {
        "fieldMetadata": [
          {
            "errors": [
              {
                "code": "INVALID_FIELD_INPUT",
                "message": "If defined default value must contain at least one value",
                "userFriendlyMessage": "If defined default value must contain at least one value",
                "value": [],
              },
            ],
            "flatEntityMinimalInformation": {
              "id": Any<String>,
              "name": "testField",
              "objectMetadataId": Any<String>,
              "universalIdentifier": Any<String>,
            },
            "metadataName": "fieldMetadata",
            "status": "fail",
            "type": "create",
          },
        ],
      },
      "message": "Validation failed for 1 fieldMetadata",
      "summary": {
        "fieldMetadata": 1,
        "totalErrors": 1,
      },
      "userFriendlyMessage": "Metadata validation failed",
    },
    "message": "Multiple validation errors occurred while creating fields",
    "name": "GraphQLError",
  },
]
`;

exports[`Failing create field metadata MULTI_SELECT tests suite v2 Create should fail with empty options 1`] = `
[
  {
    "extensions": {
      "code": "METADATA_VALIDATION_FAILED",
      "errors": {
        "fieldMetadata": [
          {
            "errors": [
              {
                "code": "INVALID_FIELD_INPUT",
                "message": "Options are required for enum fields",
                "userFriendlyMessage": "Options are required for enum fields",
                "value": [],
              },
            ],
            "flatEntityMinimalInformation": {
              "id": Any<String>,
              "name": "testField",
              "objectMetadataId": Any<String>,
              "universalIdentifier": Any<String>,
            },
            "metadataName": "fieldMetadata",
            "status": "fail",
            "type": "create",
          },
        ],
      },
      "message": "Validation failed for 1 fieldMetadata",
      "summary": {
        "fieldMetadata": 1,
        "totalErrors": 1,
      },
      "userFriendlyMessage": "Metadata validation failed",
    },
    "message": "Multiple validation errors occurred while creating fields",
    "name": "GraphQLError",
  },
]
`;

exports[`Failing create field metadata MULTI_SELECT tests suite v2 Create should fail with empty string defaultValue 1`] = `
[
  {
    "extensions": {
      "code": "METADATA_VALIDATION_FAILED",
      "errors": {
        "fieldMetadata": [
          {
            "errors": [
              {
                "code": "INVALID_FIELD_INPUT",
                "message": "Default value should be as quoted string",
                "userFriendlyMessage": "Default value should be as quoted string",
                "value": "",
              },
              {
                "code": "INVALID_FIELD_INPUT",
                "message": "Default value "" must be one of the option values",
                "userFriendlyMessage": "Default value "" must be one of the option values",
                "value": "",
              },
            ],
            "flatEntityMinimalInformation": {
              "id": Any<String>,
              "name": "testField",
              "objectMetadataId": Any<String>,
              "universalIdentifier": Any<String>,
            },
            "metadataName": "fieldMetadata",
            "status": "fail",
            "type": "create",
          },
        ],
      },
      "message": "Validation failed for 1 fieldMetadata",
      "summary": {
        "fieldMetadata": 1,
        "totalErrors": 1,
      },
      "userFriendlyMessage": "Metadata validation failed",
    },
    "message": "Multiple validation errors occurred while creating fields",
    "name": "GraphQLError",
  },
]
`;

exports[`Failing create field metadata MULTI_SELECT tests suite v2 Create should fail with empty string id 1`] = `
[
  {
    "extensions": {
      "code": "METADATA_VALIDATION_FAILED",
      "errors": {
        "fieldMetadata": [
          {
            "errors": [
              {
                "code": "INVALID_FIELD_INPUT",
                "message": "Option id is invalid",
                "userFriendlyMessage": "Option id is invalid",
                "value": "",
              },
            ],
            "flatEntityMinimalInformation": {
              "id": Any<String>,
              "name": "testField",
              "objectMetadataId": Any<String>,
              "universalIdentifier": Any<String>,
            },
            "metadataName": "fieldMetadata",
            "status": "fail",
            "type": "create",
          },
        ],
      },
      "message": "Validation failed for 1 fieldMetadata",
      "summary": {
        "fieldMetadata": 1,
        "totalErrors": 1,
      },
      "userFriendlyMessage": "Metadata validation failed",
    },
    "message": "Multiple validation errors occurred while creating fields",
    "name": "GraphQLError",
  },
]
`;

exports[`Failing create field metadata MULTI_SELECT tests suite v2 Create should fail with empty string label 1`] = `
[
  {
    "extensions": {
      "code": "METADATA_VALIDATION_FAILED",
      "errors": {
        "fieldMetadata": [
          {
            "errors": [
              {
                "code": "INVALID_FIELD_INPUT",
                "message": "Option label must be a string of at least one character",
                "userFriendlyMessage": "Option label format not supported",
                "value": "",
              },
            ],
            "flatEntityMinimalInformation": {
              "id": Any<String>,
              "name": "testField",
              "objectMetadataId": Any<String>,
              "universalIdentifier": Any<String>,
            },
            "metadataName": "fieldMetadata",
            "status": "fail",
            "type": "create",
          },
        ],
      },
      "message": "Validation failed for 1 fieldMetadata",
      "summary": {
        "fieldMetadata": 1,
        "totalErrors": 1,
      },
      "userFriendlyMessage": "Metadata validation failed",
    },
    "message": "Multiple validation errors occurred while creating fields",
    "name": "GraphQLError",
  },
]
`;

exports[`Failing create field metadata MULTI_SELECT tests suite v2 Create should fail with empty string value 1`] = `
[
  {
    "extensions": {
      "code": "METADATA_VALIDATION_FAILED",
      "errors": {
        "fieldMetadata": [
          {
            "errors": [
              {
                "code": "INVALID_FIELD_INPUT",
                "message": "Option value must be a string of at least one character",
                "userFriendlyMessage": "Option value format not supported",
                "value": "",
              },
            ],
            "flatEntityMinimalInformation": {
              "id": Any<String>,
              "name": "testField",
              "objectMetadataId": Any<String>,
              "universalIdentifier": Any<String>,
            },
            "metadataName": "fieldMetadata",
            "status": "fail",
            "type": "create",
          },
        ],
      },
      "message": "Validation failed for 1 fieldMetadata",
      "summary": {
        "fieldMetadata": 1,
        "totalErrors": 1,
      },
      "userFriendlyMessage": "Metadata validation failed",
    },
    "message": "Multiple validation errors occurred while creating fields",
    "name": "GraphQLError",
  },
]
`;

exports[`Failing create field metadata MULTI_SELECT tests suite v2 Create should fail with invalid multi-select default value format 1`] = `
[
  {
    "extensions": {
      "code": "METADATA_VALIDATION_FAILED",
      "errors": {
        "fieldMetadata": [
          {
            "errors": [
              {
                "code": "INVALID_FIELD_INPUT",
                "message": "Default value should be as quoted string",
                "userFriendlyMessage": "Default value should be as quoted string",
                "value": "invalid",
              },
              {
                "code": "INVALID_FIELD_INPUT",
                "message": "Default value "invalid" must be one of the option values",
                "userFriendlyMessage": "Default value "invalid" must be one of the option values",
                "value": "invalid",
              },
              {
                "code": "INVALID_FIELD_INPUT",
                "message": "Default value should be as quoted string",
                "userFriendlyMessage": "Default value should be as quoted string",
                "value": "format",
              },
              {
                "code": "INVALID_FIELD_INPUT",
                "message": "Default value "format" must be one of the option values",
                "userFriendlyMessage": "Default value "format" must be one of the option values",
                "value": "format",
              },
            ],
            "flatEntityMinimalInformation": {
              "id": Any<String>,
              "name": "testField",
              "objectMetadataId": Any<String>,
              "universalIdentifier": Any<String>,
            },
            "metadataName": "fieldMetadata",
            "status": "fail",
            "type": "create",
          },
        ],
      },
      "message": "Validation failed for 1 fieldMetadata",
      "summary": {
        "fieldMetadata": 1,
        "totalErrors": 1,
      },
      "userFriendlyMessage": "Metadata validation failed",
    },
    "message": "Multiple validation errors occurred while creating fields",
    "name": "GraphQLError",
  },
]
`;

exports[`Failing create field metadata MULTI_SELECT tests suite v2 Create should fail with invalid option id 1`] = `
[
  {
    "extensions": {
      "code": "METADATA_VALIDATION_FAILED",
      "errors": {
        "fieldMetadata": [
          {
            "errors": [
              {
                "code": "INVALID_FIELD_INPUT",
                "message": "Option id is invalid",
                "userFriendlyMessage": "Option id is invalid",
                "value": "not a uuid",
              },
            ],
            "flatEntityMinimalInformation": {
              "id": Any<String>,
              "name": "testField",
              "objectMetadataId": Any<String>,
              "universalIdentifier": Any<String>,
            },
            "metadataName": "fieldMetadata",
            "status": "fail",
            "type": "create",
          },
        ],
      },
      "message": "Validation failed for 1 fieldMetadata",
      "summary": {
        "fieldMetadata": 1,
        "totalErrors": 1,
      },
      "userFriendlyMessage": "Metadata validation failed",
    },
    "message": "Multiple validation errors occurred while creating fields",
    "name": "GraphQLError",
  },
]
`;

exports[`Failing create field metadata MULTI_SELECT tests suite v2 Create should fail with invalid option value format 1`] = `
[
  {
    "extensions": {
      "code": "METADATA_VALIDATION_FAILED",
      "errors": {
        "fieldMetadata": [
          {
            "errors": [
              {
                "code": "INVALID_FIELD_INPUT",
                "message": "Value must be in UPPER_CASE and follow snake_case "Option 1 and some other things, /"",
                "userFriendlyMessage": "Value must be in UPPER_CASE and follow snake_case "Option 1 and some other things, /"",
                "value": "Option 1 and some other things, /",
              },
            ],
            "flatEntityMinimalInformation": {
              "id": Any<String>,
              "name": "testField",
              "objectMetadataId": Any<String>,
              "universalIdentifier": Any<String>,
            },
            "metadataName": "fieldMetadata",
            "status": "fail",
            "type": "create",
          },
        ],
      },
      "message": "Validation failed for 1 fieldMetadata",
      "summary": {
        "fieldMetadata": 1,
        "totalErrors": 1,
      },
      "userFriendlyMessage": "Metadata validation failed",
    },
    "message": "Multiple validation errors occurred while creating fields",
    "name": "GraphQLError",
  },
]
`;

exports[`Failing create field metadata MULTI_SELECT tests suite v2 Create should fail with non stringified array default value 1`] = `
[
  {
    "extensions": {
      "code": "METADATA_VALIDATION_FAILED",
      "errors": {
        "fieldMetadata": [
          {
            "errors": [
              {
                "code": "INVALID_FIELD_INPUT",
                "message": "Default value for multi-select must be an array got Option_1",
                "userFriendlyMessage": "Multi-select field default value must be an array",
                "value": "Option_1",
              },
            ],
            "flatEntityMinimalInformation": {
              "id": Any<String>,
              "name": "testField",
              "objectMetadataId": Any<String>,
              "universalIdentifier": Any<String>,
            },
            "metadataName": "fieldMetadata",
            "status": "fail",
            "type": "create",
          },
        ],
      },
      "message": "Validation failed for 1 fieldMetadata",
      "summary": {
        "fieldMetadata": 1,
        "totalErrors": 1,
      },
      "userFriendlyMessage": "Metadata validation failed",
    },
    "message": "Multiple validation errors occurred while creating fields",
    "name": "GraphQLError",
  },
]
`;

exports[`Failing create field metadata MULTI_SELECT tests suite v2 Create should fail with not a string defaultValue 1`] = `
[
  {
    "extensions": {
      "code": "METADATA_VALIDATION_FAILED",
      "errors": {
        "fieldMetadata": [
          {
            "errors": [
              {
                "code": "INVALID_FIELD_INPUT",
                "message": "Default value for select must be a string got 22222",
                "userFriendlyMessage": "Default value must be a string",
                "value": 22222,
              },
            ],
            "flatEntityMinimalInformation": {
              "id": Any<String>,
              "name": "testField",
              "objectMetadataId": Any<String>,
              "universalIdentifier": Any<String>,
            },
            "metadataName": "fieldMetadata",
            "status": "fail",
            "type": "create",
          },
        ],
      },
      "message": "Validation failed for 1 fieldMetadata",
      "summary": {
        "fieldMetadata": 1,
        "totalErrors": 1,
      },
      "userFriendlyMessage": "Metadata validation failed",
    },
    "message": "Multiple validation errors occurred while creating fields",
    "name": "GraphQLError",
  },
]
`;

exports[`Failing create field metadata MULTI_SELECT tests suite v2 Create should fail with not a string id 1`] = `
[
  {
    "extensions": {
      "code": "METADATA_VALIDATION_FAILED",
      "errors": {
        "fieldMetadata": [
          {
            "errors": [
              {
                "code": "INVALID_FIELD_INPUT",
                "message": "Option id is invalid",
                "userFriendlyMessage": "Option id is invalid",
                "value": 22222,
              },
            ],
            "flatEntityMinimalInformation": {
              "id": Any<String>,
              "name": "testField",
              "objectMetadataId": Any<String>,
              "universalIdentifier": Any<String>,
            },
            "metadataName": "fieldMetadata",
            "status": "fail",
            "type": "create",
          },
        ],
      },
      "message": "Validation failed for 1 fieldMetadata",
      "summary": {
        "fieldMetadata": 1,
        "totalErrors": 1,
      },
      "userFriendlyMessage": "Metadata validation failed",
    },
    "message": "Multiple validation errors occurred while creating fields",
    "name": "GraphQLError",
  },
]
`;

exports[`Failing create field metadata MULTI_SELECT tests suite v2 Create should fail with not a string label 1`] = `
[
  {
    "extensions": {
      "code": "METADATA_VALIDATION_FAILED",
      "errors": {
        "fieldMetadata": [
          {
            "errors": [
              {
                "code": "INVALID_FIELD_INPUT",
                "message": "Option label must be a string of at least one character",
                "userFriendlyMessage": "Option label format not supported",
                "value": 22222,
              },
            ],
            "flatEntityMinimalInformation": {
              "id": Any<String>,
              "name": "testField",
              "objectMetadataId": Any<String>,
              "universalIdentifier": Any<String>,
            },
            "metadataName": "fieldMetadata",
            "status": "fail",
            "type": "create",
          },
        ],
      },
      "message": "Validation failed for 1 fieldMetadata",
      "summary": {
        "fieldMetadata": 1,
        "totalErrors": 1,
      },
      "userFriendlyMessage": "Metadata validation failed",
    },
    "message": "Multiple validation errors occurred while creating fields",
    "name": "GraphQLError",
  },
]
`;

exports[`Failing create field metadata MULTI_SELECT tests suite v2 Create should fail with not a string value 1`] = `
[
  {
    "extensions": {
      "code": "METADATA_VALIDATION_FAILED",
      "errors": {
        "fieldMetadata": [
          {
            "errors": [
              {
                "code": "INVALID_FIELD_INPUT",
                "message": "Option value must be a string of at least one character",
                "userFriendlyMessage": "Option value format not supported",
                "value": 22222,
              },
            ],
            "flatEntityMinimalInformation": {
              "id": Any<String>,
              "name": "testField",
              "objectMetadataId": Any<String>,
              "universalIdentifier": Any<String>,
            },
            "metadataName": "fieldMetadata",
            "status": "fail",
            "type": "create",
          },
        ],
      },
      "message": "Validation failed for 1 fieldMetadata",
      "summary": {
        "fieldMetadata": 1,
        "totalErrors": 1,
      },
      "userFriendlyMessage": "Metadata validation failed",
    },
    "message": "Multiple validation errors occurred while creating fields",
    "name": "GraphQLError",
  },
]
`;

exports[`Failing create field metadata MULTI_SELECT tests suite v2 Create should fail with null id 1`] = `
[
  {
    "extensions": {
      "code": "METADATA_VALIDATION_FAILED",
      "errors": {
        "fieldMetadata": [
          {
            "errors": [
              {
                "code": "INVALID_FIELD_INPUT",
                "message": "Option id is required",
                "userFriendlyMessage": "Option id is required",
              },
              {
                "code": "INVALID_FIELD_INPUT",
                "message": "Option id is invalid",
                "userFriendlyMessage": "Option id is invalid",
                "value": null,
              },
            ],
            "flatEntityMinimalInformation": {
              "id": Any<String>,
              "name": "testField",
              "objectMetadataId": Any<String>,
              "universalIdentifier": Any<String>,
            },
            "metadataName": "fieldMetadata",
            "status": "fail",
            "type": "create",
          },
        ],
      },
      "message": "Validation failed for 1 fieldMetadata",
      "summary": {
        "fieldMetadata": 1,
        "totalErrors": 1,
      },
      "userFriendlyMessage": "Metadata validation failed",
    },
    "message": "Multiple validation errors occurred while creating fields",
    "name": "GraphQLError",
  },
]
`;

exports[`Failing create field metadata MULTI_SELECT tests suite v2 Create should fail with null label 1`] = `
[
  {
    "extensions": {
      "code": "METADATA_VALIDATION_FAILED",
      "errors": {
        "fieldMetadata": [
          {
            "errors": [
              {
                "code": "INVALID_FIELD_INPUT",
                "message": "Option label is required",
                "userFriendlyMessage": "Option label is required",
              },
            ],
            "flatEntityMinimalInformation": {
              "id": Any<String>,
              "name": "testField",
              "objectMetadataId": Any<String>,
              "universalIdentifier": Any<String>,
            },
            "metadataName": "fieldMetadata",
            "status": "fail",
            "type": "create",
          },
        ],
      },
      "message": "Validation failed for 1 fieldMetadata",
      "summary": {
        "fieldMetadata": 1,
        "totalErrors": 1,
      },
      "userFriendlyMessage": "Metadata validation failed",
    },
    "message": "Multiple validation errors occurred while creating fields",
    "name": "GraphQLError",
  },
]
`;

exports[`Failing create field metadata MULTI_SELECT tests suite v2 Create should fail with null options 1`] = `
[
  {
    "extensions": {
      "code": "METADATA_VALIDATION_FAILED",
      "errors": {
        "fieldMetadata": [
          {
            "errors": [
              {
                "code": "INVALID_FIELD_INPUT",
                "message": "Options are required for enum fields",
                "userFriendlyMessage": "Options are required for enum fields",
                "value": [],
              },
            ],
            "flatEntityMinimalInformation": {
              "id": Any<String>,
              "name": "testField",
              "objectMetadataId": Any<String>,
              "universalIdentifier": Any<String>,
            },
            "metadataName": "fieldMetadata",
            "status": "fail",
            "type": "create",
          },
        ],
      },
      "message": "Validation failed for 1 fieldMetadata",
      "summary": {
        "fieldMetadata": 1,
        "totalErrors": 1,
      },
      "userFriendlyMessage": "Metadata validation failed",
    },
    "message": "Multiple validation errors occurred while creating fields",
    "name": "GraphQLError",
  },
]
`;

exports[`Failing create field metadata MULTI_SELECT tests suite v2 Create should fail with null value 1`] = `
[
  {
    "extensions": {
      "code": "METADATA_VALIDATION_FAILED",
      "errors": {
        "fieldMetadata": [
          {
            "errors": [
              {
                "code": "INVALID_FIELD_INPUT",
                "message": "Option value is required",
                "userFriendlyMessage": "Option value is required",
              },
            ],
            "flatEntityMinimalInformation": {
              "id": Any<String>,
              "name": "testField",
              "objectMetadataId": Any<String>,
              "universalIdentifier": Any<String>,
            },
            "metadataName": "fieldMetadata",
            "status": "fail",
            "type": "create",
          },
        ],
      },
      "message": "Validation failed for 1 fieldMetadata",
      "summary": {
        "fieldMetadata": 1,
        "totalErrors": 1,
      },
      "userFriendlyMessage": "Metadata validation failed",
    },
    "message": "Multiple validation errors occurred while creating fields",
    "name": "GraphQLError",
  },
]
`;

exports[`Failing create field metadata MULTI_SELECT tests suite v2 Create should fail with only white spaces defaultValue 1`] = `
[
  {
    "extensions": {
      "code": "METADATA_VALIDATION_FAILED",
      "errors": {
        "fieldMetadata": [
          {
            "errors": [
              {
                "code": "INVALID_FIELD_INPUT",
                "message": "Default value should be as quoted string",
                "userFriendlyMessage": "Default value should be as quoted string",
                "value": "",
              },
              {
                "code": "INVALID_FIELD_INPUT",
                "message": "Default value "" must be one of the option values",
                "userFriendlyMessage": "Default value "" must be one of the option values",
                "value": "",
              },
            ],
            "flatEntityMinimalInformation": {
              "id": Any<String>,
              "name": "testField",
              "objectMetadataId": Any<String>,
              "universalIdentifier": Any<String>,
            },
            "metadataName": "fieldMetadata",
            "status": "fail",
            "type": "create",
          },
        ],
      },
      "message": "Validation failed for 1 fieldMetadata",
      "summary": {
        "fieldMetadata": 1,
        "totalErrors": 1,
      },
      "userFriendlyMessage": "Metadata validation failed",
    },
    "message": "Multiple validation errors occurred while creating fields",
    "name": "GraphQLError",
  },
]
`;

exports[`Failing create field metadata MULTI_SELECT tests suite v2 Create should fail with only white spaces id 1`] = `
[
  {
    "extensions": {
      "code": "METADATA_VALIDATION_FAILED",
      "errors": {
        "fieldMetadata": [
          {
            "errors": [
              {
                "code": "INVALID_FIELD_INPUT",
                "message": "Option id is invalid",
                "userFriendlyMessage": "Option id is invalid",
                "value": "",
              },
            ],
            "flatEntityMinimalInformation": {
              "id": Any<String>,
              "name": "testField",
              "objectMetadataId": Any<String>,
              "universalIdentifier": Any<String>,
            },
            "metadataName": "fieldMetadata",
            "status": "fail",
            "type": "create",
          },
        ],
      },
      "message": "Validation failed for 1 fieldMetadata",
      "summary": {
        "fieldMetadata": 1,
        "totalErrors": 1,
      },
      "userFriendlyMessage": "Metadata validation failed",
    },
    "message": "Multiple validation errors occurred while creating fields",
    "name": "GraphQLError",
  },
]
`;

exports[`Failing create field metadata MULTI_SELECT tests suite v2 Create should fail with only white spaces label 1`] = `
[
  {
    "extensions": {
      "code": "METADATA_VALIDATION_FAILED",
      "errors": {
        "fieldMetadata": [
          {
            "errors": [
              {
                "code": "INVALID_FIELD_INPUT",
                "message": "Option label must be a string of at least one character",
                "userFriendlyMessage": "Option label format not supported",
                "value": "",
              },
            ],
            "flatEntityMinimalInformation": {
              "id": Any<String>,
              "name": "testField",
              "objectMetadataId": Any<String>,
              "universalIdentifier": Any<String>,
            },
            "metadataName": "fieldMetadata",
            "status": "fail",
            "type": "create",
          },
        ],
      },
      "message": "Validation failed for 1 fieldMetadata",
      "summary": {
        "fieldMetadata": 1,
        "totalErrors": 1,
      },
      "userFriendlyMessage": "Metadata validation failed",
    },
    "message": "Multiple validation errors occurred while creating fields",
    "name": "GraphQLError",
  },
]
`;

exports[`Failing create field metadata MULTI_SELECT tests suite v2 Create should fail with only white spaces value 1`] = `
[
  {
    "extensions": {
      "code": "METADATA_VALIDATION_FAILED",
      "errors": {
        "fieldMetadata": [
          {
            "errors": [
              {
                "code": "INVALID_FIELD_INPUT",
                "message": "Option value must be a string of at least one character",
                "userFriendlyMessage": "Option value format not supported",
                "value": "",
              },
            ],
            "flatEntityMinimalInformation": {
              "id": Any<String>,
              "name": "testField",
              "objectMetadataId": Any<String>,
              "universalIdentifier": Any<String>,
            },
            "metadataName": "fieldMetadata",
            "status": "fail",
            "type": "create",
          },
        ],
      },
      "message": "Validation failed for 1 fieldMetadata",
      "summary": {
        "fieldMetadata": 1,
        "totalErrors": 1,
      },
      "userFriendlyMessage": "Metadata validation failed",
    },
    "message": "Multiple validation errors occurred while creating fields",
    "name": "GraphQLError",
  },
]
`;

exports[`Failing create field metadata MULTI_SELECT tests suite v2 Create should fail with too long defaultValue 1`] = `
[
  {
    "extensions": {
      "code": "METADATA_VALIDATION_FAILED",
      "errors": {
        "fieldMetadata": [
          {
            "errors": [
              {
                "code": "INVALID_FIELD_INPUT",
                "message": "Default value should be as quoted string",
                "userFriendlyMessage": "Default value should be as quoted string",
                "value": "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa",
              },
              {
                "code": "INVALID_FIELD_INPUT",
                "message": "Default value "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa" must be one of the option values",
                "userFriendlyMessage": "Default value "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa" must be one of the option values",
                "value": "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa",
              },
            ],
            "flatEntityMinimalInformation": {
              "id": Any<String>,
              "name": "testField",
              "objectMetadataId": Any<String>,
              "universalIdentifier": Any<String>,
            },
            "metadataName": "fieldMetadata",
            "status": "fail",
            "type": "create",
          },
        ],
      },
      "message": "Validation failed for 1 fieldMetadata",
      "summary": {
        "fieldMetadata": 1,
        "totalErrors": 1,
      },
      "userFriendlyMessage": "Metadata validation failed",
    },
    "message": "Multiple validation errors occurred while creating fields",
    "name": "GraphQLError",
  },
]
`;

exports[`Failing create field metadata MULTI_SELECT tests suite v2 Create should fail with too long id 1`] = `
[
  {
    "extensions": {
      "code": "METADATA_VALIDATION_FAILED",
      "errors": {
        "fieldMetadata": [
          {
            "errors": [
              {
                "code": "INVALID_FIELD_INPUT",
                "message": "Option id is invalid",
                "userFriendlyMessage": "Option id is invalid",
                "value": "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa",
              },
            ],
            "flatEntityMinimalInformation": {
              "id": Any<String>,
              "name": "testField",
              "objectMetadataId": Any<String>,
              "universalIdentifier": Any<String>,
            },
            "metadataName": "fieldMetadata",
            "status": "fail",
            "type": "create",
          },
        ],
      },
      "message": "Validation failed for 1 fieldMetadata",
      "summary": {
        "fieldMetadata": 1,
        "totalErrors": 1,
      },
      "userFriendlyMessage": "Metadata validation failed",
    },
    "message": "Multiple validation errors occurred while creating fields",
    "name": "GraphQLError",
  },
]
`;

exports[`Failing create field metadata MULTI_SELECT tests suite v2 Create should fail with too long label 1`] = `
[
  {
    "extensions": {
      "code": "METADATA_VALIDATION_FAILED",
      "errors": {
        "fieldMetadata": [
          {
            "errors": [
              {
                "code": "INVALID_FIELD_INPUT",
                "message": "Option label exceeds 63 characters",
                "userFriendlyMessage": "Option label exceeds 63 characters",
                "value": "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa",
              },
            ],
            "flatEntityMinimalInformation": {
              "id": Any<String>,
              "name": "testField",
              "objectMetadataId": Any<String>,
              "universalIdentifier": Any<String>,
            },
            "metadataName": "fieldMetadata",
            "status": "fail",
            "type": "create",
          },
        ],
      },
      "message": "Validation failed for 1 fieldMetadata",
      "summary": {
        "fieldMetadata": 1,
        "totalErrors": 1,
      },
      "userFriendlyMessage": "Metadata validation failed",
    },
    "message": "Multiple validation errors occurred while creating fields",
    "name": "GraphQLError",
  },
]
`;

exports[`Failing create field metadata MULTI_SELECT tests suite v2 Create should fail with too long value 1`] = `
[
  {
    "extensions": {
      "code": "METADATA_VALIDATION_FAILED",
      "errors": {
        "fieldMetadata": [
          {
            "errors": [
              {
                "code": "INVALID_FIELD_INPUT",
                "message": "Option value exceeds 63 characters",
                "userFriendlyMessage": "Option value exceeds 63 characters",
                "value": "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa",
              },
              {
                "code": "INVALID_FIELD_INPUT",
                "message": "Value must be in UPPER_CASE and follow snake_case "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa"",
                "userFriendlyMessage": "Value must be in UPPER_CASE and follow snake_case "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa"",
                "value": "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa",
              },
            ],
            "flatEntityMinimalInformation": {
              "id": Any<String>,
              "name": "testField",
              "objectMetadataId": Any<String>,
              "universalIdentifier": Any<String>,
            },
            "metadataName": "fieldMetadata",
            "status": "fail",
            "type": "create",
          },
        ],
      },
      "message": "Validation failed for 1 fieldMetadata",
      "summary": {
        "fieldMetadata": 1,
        "totalErrors": 1,
      },
      "userFriendlyMessage": "Metadata validation failed",
    },
    "message": "Multiple validation errors occurred while creating fields",
    "name": "GraphQLError",
  },
]
`;

exports[`Failing create field metadata MULTI_SELECT tests suite v2 Create should fail with undefined option label 1`] = `
[
  {
    "extensions": {
      "code": "METADATA_VALIDATION_FAILED",
      "errors": {
        "fieldMetadata": [
          {
            "errors": [
              {
                "code": "INVALID_FIELD_INPUT",
                "message": "Option label is required",
                "userFriendlyMessage": "Option label is required",
              },
            ],
            "flatEntityMinimalInformation": {
              "id": Any<String>,
              "name": "testField",
              "objectMetadataId": Any<String>,
              "universalIdentifier": Any<String>,
            },
            "metadataName": "fieldMetadata",
            "status": "fail",
            "type": "create",
          },
        ],
      },
      "message": "Validation failed for 1 fieldMetadata",
      "summary": {
        "fieldMetadata": 1,
        "totalErrors": 1,
      },
      "userFriendlyMessage": "Metadata validation failed",
    },
    "message": "Multiple validation errors occurred while creating fields",
    "name": "GraphQLError",
  },
]
`;

exports[`Failing create field metadata MULTI_SELECT tests suite v2 Create should fail with undefined option value 1`] = `
[
  {
    "extensions": {
      "code": "METADATA_VALIDATION_FAILED",
      "errors": {
        "fieldMetadata": [
          {
            "errors": [
              {
                "code": "INVALID_FIELD_INPUT",
                "message": "Option value is required",
                "userFriendlyMessage": "Option value is required",
              },
            ],
            "flatEntityMinimalInformation": {
              "id": Any<String>,
              "name": "testField",
              "objectMetadataId": Any<String>,
              "universalIdentifier": Any<String>,
            },
            "metadataName": "fieldMetadata",
            "status": "fail",
            "type": "create",
          },
        ],
      },
      "message": "Validation failed for 1 fieldMetadata",
      "summary": {
        "fieldMetadata": 1,
        "totalErrors": 1,
      },
      "userFriendlyMessage": "Metadata validation failed",
    },
    "message": "Multiple validation errors occurred while creating fields",
    "name": "GraphQLError",
  },
]
`;

exports[`Failing create field metadata MULTI_SELECT tests suite v2 Create should fail with undefined options 1`] = `
[
  {
    "extensions": {
      "code": "METADATA_VALIDATION_FAILED",
      "errors": {
        "fieldMetadata": [
          {
            "errors": [
              {
                "code": "INVALID_FIELD_INPUT",
                "message": "Options are required for enum fields",
                "userFriendlyMessage": "Options are required for enum fields",
                "value": [],
              },
            ],
            "flatEntityMinimalInformation": {
              "id": Any<String>,
              "name": "testField",
              "objectMetadataId": Any<String>,
              "universalIdentifier": Any<String>,
            },
            "metadataName": "fieldMetadata",
            "status": "fail",
            "type": "create",
          },
        ],
      },
      "message": "Validation failed for 1 fieldMetadata",
      "summary": {
        "fieldMetadata": 1,
        "totalErrors": 1,
      },
      "userFriendlyMessage": "Metadata validation failed",
    },
    "message": "Multiple validation errors occurred while creating fields",
    "name": "GraphQLError",
  },
]
`;

exports[`Failing create field metadata MULTI_SELECT tests suite v2 Create should fail with unknown multi-select default values 1`] = `
[
  {
    "extensions": {
      "code": "METADATA_VALIDATION_FAILED",
      "errors": {
        "fieldMetadata": [
          {
            "errors": [
              {
                "code": "INVALID_FIELD_INPUT",
                "message": "Default value "'UNKNOWN_OPTION'" must be one of the option values",
                "userFriendlyMessage": "Default value "'UNKNOWN_OPTION'" must be one of the option values",
                "value": "'UNKNOWN_OPTION'",
              },
            ],
            "flatEntityMinimalInformation": {
              "id": Any<String>,
              "name": "testField",
              "objectMetadataId": Any<String>,
              "universalIdentifier": Any<String>,
            },
            "metadataName": "fieldMetadata",
            "status": "fail",
            "type": "create",
          },
        ],
      },
      "message": "Validation failed for 1 fieldMetadata",
      "summary": {
        "fieldMetadata": 1,
        "totalErrors": 1,
      },
      "userFriendlyMessage": "Metadata validation failed",
    },
    "message": "Multiple validation errors occurred while creating fields",
    "name": "GraphQLError",
  },
]
`;

exports[`Failing create field metadata SELECT tests suite v2 Create should fail with an invalid default value 1`] = `
[
  {
    "extensions": {
      "code": "METADATA_VALIDATION_FAILED",
      "errors": {
        "fieldMetadata": [
          {
            "errors": [
              {
                "code": "INVALID_FIELD_INPUT",
                "message": "Default value should be as quoted string",
                "userFriendlyMessage": "Default value should be as quoted string",
                "value": "invalid",
              },
              {
                "code": "INVALID_FIELD_INPUT",
                "message": "Default value "invalid" must be one of the option values",
                "userFriendlyMessage": "Default value "invalid" must be one of the option values",
                "value": "invalid",
              },
            ],
            "flatEntityMinimalInformation": {
              "id": Any<String>,
              "name": "testField",
              "objectMetadataId": Any<String>,
              "universalIdentifier": Any<String>,
            },
            "metadataName": "fieldMetadata",
            "status": "fail",
            "type": "create",
          },
        ],
      },
      "message": "Validation failed for 1 fieldMetadata",
      "summary": {
        "fieldMetadata": 1,
        "totalErrors": 1,
      },
      "userFriendlyMessage": "Metadata validation failed",
    },
    "message": "Multiple validation errors occurred while creating fields",
    "name": "GraphQLError",
  },
]
`;

exports[`Failing create field metadata SELECT tests suite v2 Create should fail with an unknown default value 1`] = `
[
  {
    "extensions": {
      "code": "METADATA_VALIDATION_FAILED",
      "errors": {
        "fieldMetadata": [
          {
            "errors": [
              {
                "code": "INVALID_FIELD_INPUT",
                "message": "Default value "'OPTION_424242'" must be one of the option values",
                "userFriendlyMessage": "Default value "'OPTION_424242'" must be one of the option values",
                "value": "'OPTION_424242'",
              },
            ],
            "flatEntityMinimalInformation": {
              "id": Any<String>,
              "name": "testField",
              "objectMetadataId": Any<String>,
              "universalIdentifier": Any<String>,
            },
            "metadataName": "fieldMetadata",
            "status": "fail",
            "type": "create",
          },
        ],
      },
      "message": "Validation failed for 1 fieldMetadata",
      "summary": {
        "fieldMetadata": 1,
        "totalErrors": 1,
      },
      "userFriendlyMessage": "Metadata validation failed",
    },
    "message": "Multiple validation errors occurred while creating fields",
    "name": "GraphQLError",
  },
]
`;

exports[`Failing create field metadata SELECT tests suite v2 Create should fail with comma in option label 1`] = `
[
  {
    "extensions": {
      "code": "METADATA_VALIDATION_FAILED",
      "errors": {
        "fieldMetadata": [
          {
            "errors": [
              {
                "code": "INVALID_FIELD_INPUT",
                "message": "Label must not contain a comma",
                "userFriendlyMessage": "Label must not contain a comma",
                "value": "Option ,1",
              },
            ],
            "flatEntityMinimalInformation": {
              "id": Any<String>,
              "name": "testField",
              "objectMetadataId": Any<String>,
              "universalIdentifier": Any<String>,
            },
            "metadataName": "fieldMetadata",
            "status": "fail",
            "type": "create",
          },
        ],
      },
      "message": "Validation failed for 1 fieldMetadata",
      "summary": {
        "fieldMetadata": 1,
        "totalErrors": 1,
      },
      "userFriendlyMessage": "Metadata validation failed",
    },
    "message": "Multiple validation errors occurred while creating fields",
    "name": "GraphQLError",
  },
]
`;

exports[`Failing create field metadata SELECT tests suite v2 Create should fail with duplicated option ids 1`] = `
[
  {
    "extensions": {
      "code": "METADATA_VALIDATION_FAILED",
      "errors": {
        "fieldMetadata": [
          {
            "errors": [
              {
                "code": "INVALID_FIELD_INPUT",
                "message": "Duplicated option id",
                "userFriendlyMessage": "Duplicated option id",
                "value": [
                  {
                    "color": "green",
                    "id": Any<String>,
                    "label": "Option 1",
                    "position": 1,
                    "value": "OPTION_1",
                  },
                  {
                    "color": "green",
                    "id": Any<String>,
                    "label": "Option 2",
                    "position": 2,
                    "value": "OPTION_2",
                  },
                ],
              },
            ],
            "flatEntityMinimalInformation": {
              "id": Any<String>,
              "name": "testField",
              "objectMetadataId": Any<String>,
              "universalIdentifier": Any<String>,
            },
            "metadataName": "fieldMetadata",
            "status": "fail",
            "type": "create",
          },
        ],
      },
      "message": "Validation failed for 1 fieldMetadata",
      "summary": {
        "fieldMetadata": 1,
        "totalErrors": 1,
      },
      "userFriendlyMessage": "Metadata validation failed",
    },
    "message": "Multiple validation errors occurred while creating fields",
    "name": "GraphQLError",
  },
]
`;

exports[`Failing create field metadata SELECT tests suite v2 Create should fail with duplicated option positions 1`] = `
[
  {
    "extensions": {
      "code": "METADATA_VALIDATION_FAILED",
      "errors": {
        "fieldMetadata": [
          {
            "errors": [
              {
                "code": "INVALID_FIELD_INPUT",
                "message": "Duplicated option position",
                "userFriendlyMessage": "Duplicated option position",
                "value": [
                  {
                    "color": "green",
                    "id": Any<String>,
                    "label": "Option 1",
                    "position": 1,
                    "value": "OPTION_1",
                  },
                  {
                    "color": "green",
                    "id": Any<String>,
                    "label": "Option 2",
                    "position": 1,
                    "value": "OPTION_2",
                  },
                ],
              },
            ],
            "flatEntityMinimalInformation": {
              "id": Any<String>,
              "name": "testField",
              "objectMetadataId": Any<String>,
              "universalIdentifier": Any<String>,
            },
            "metadataName": "fieldMetadata",
            "status": "fail",
            "type": "create",
          },
        ],
      },
      "message": "Validation failed for 1 fieldMetadata",
      "summary": {
        "fieldMetadata": 1,
        "totalErrors": 1,
      },
      "userFriendlyMessage": "Metadata validation failed",
    },
    "message": "Multiple validation errors occurred while creating fields",
    "name": "GraphQLError",
  },
]
`;

exports[`Failing create field metadata SELECT tests suite v2 Create should fail with duplicated option values 1`] = `
[
  {
    "extensions": {
      "code": "METADATA_VALIDATION_FAILED",
      "errors": {
        "fieldMetadata": [
          {
            "errors": [
              {
                "code": "INVALID_FIELD_INPUT",
                "message": "Duplicated option value",
                "userFriendlyMessage": "Duplicated option value",
                "value": [
                  {
                    "color": "green",
                    "id": Any<String>,
                    "label": "Option 1",
                    "position": 0,
                    "value": "OPTION_1",
                  },
                  {
                    "color": "green",
                    "id": Any<String>,
                    "label": "Option 1",
                    "position": 1,
                    "value": "OPTION_1",
                  },
                ],
              },
            ],
            "flatEntityMinimalInformation": {
              "id": Any<String>,
              "name": "testField",
              "objectMetadataId": Any<String>,
              "universalIdentifier": Any<String>,
            },
            "metadataName": "fieldMetadata",
            "status": "fail",
            "type": "create",
          },
        ],
      },
      "message": "Validation failed for 1 fieldMetadata",
      "summary": {
        "fieldMetadata": 1,
        "totalErrors": 1,
      },
      "userFriendlyMessage": "Metadata validation failed",
    },
    "message": "Multiple validation errors occurred while creating fields",
    "name": "GraphQLError",
  },
]
`;

exports[`Failing create field metadata SELECT tests suite v2 Create should fail with duplicated trimmed option values 1`] = `
[
  {
    "extensions": {
      "code": "METADATA_VALIDATION_FAILED",
      "errors": {
        "fieldMetadata": [
          {
            "errors": [
              {
                "code": "INVALID_FIELD_INPUT",
                "message": "Duplicated option value",
                "userFriendlyMessage": "Duplicated option value",
                "value": [
                  {
                    "color": "green",
                    "id": Any<String>,
                    "label": "Option 1",
                    "position": 1,
                    "value": "OPTION_1",
                  },
                  {
                    "color": "green",
                    "id": Any<String>,
                    "label": "Option 2",
                    "position": 2,
                    "value": "OPTION_1",
                  },
                ],
              },
            ],
            "flatEntityMinimalInformation": {
              "id": Any<String>,
              "name": "testField",
              "objectMetadataId": Any<String>,
              "universalIdentifier": Any<String>,
            },
            "metadataName": "fieldMetadata",
            "status": "fail",
            "type": "create",
          },
        ],
      },
      "message": "Validation failed for 1 fieldMetadata",
      "summary": {
        "fieldMetadata": 1,
        "totalErrors": 1,
      },
      "userFriendlyMessage": "Metadata validation failed",
    },
    "message": "Multiple validation errors occurred while creating fields",
    "name": "GraphQLError",
  },
]
`;

exports[`Failing create field metadata SELECT tests suite v2 Create should fail with empty options 1`] = `
[
  {
    "extensions": {
      "code": "METADATA_VALIDATION_FAILED",
      "errors": {
        "fieldMetadata": [
          {
            "errors": [
              {
                "code": "INVALID_FIELD_INPUT",
                "message": "Options are required for enum fields",
                "userFriendlyMessage": "Options are required for enum fields",
                "value": [],
              },
            ],
            "flatEntityMinimalInformation": {
              "id": Any<String>,
              "name": "testField",
              "objectMetadataId": Any<String>,
              "universalIdentifier": Any<String>,
            },
            "metadataName": "fieldMetadata",
            "status": "fail",
            "type": "create",
          },
        ],
      },
      "message": "Validation failed for 1 fieldMetadata",
      "summary": {
        "fieldMetadata": 1,
        "totalErrors": 1,
      },
      "userFriendlyMessage": "Metadata validation failed",
    },
    "message": "Multiple validation errors occurred while creating fields",
    "name": "GraphQLError",
  },
]
`;

exports[`Failing create field metadata SELECT tests suite v2 Create should fail with empty string defaultValue 1`] = `
[
  {
    "extensions": {
      "code": "METADATA_VALIDATION_FAILED",
      "errors": {
        "fieldMetadata": [
          {
            "errors": [
              {
                "code": "INVALID_FIELD_INPUT",
                "message": "Default value should be as quoted string",
                "userFriendlyMessage": "Default value should be as quoted string",
                "value": "",
              },
              {
                "code": "INVALID_FIELD_INPUT",
                "message": "Default value "" must be one of the option values",
                "userFriendlyMessage": "Default value "" must be one of the option values",
                "value": "",
              },
            ],
            "flatEntityMinimalInformation": {
              "id": Any<String>,
              "name": "testField",
              "objectMetadataId": Any<String>,
              "universalIdentifier": Any<String>,
            },
            "metadataName": "fieldMetadata",
            "status": "fail",
            "type": "create",
          },
        ],
      },
      "message": "Validation failed for 1 fieldMetadata",
      "summary": {
        "fieldMetadata": 1,
        "totalErrors": 1,
      },
      "userFriendlyMessage": "Metadata validation failed",
    },
    "message": "Multiple validation errors occurred while creating fields",
    "name": "GraphQLError",
  },
]
`;

exports[`Failing create field metadata SELECT tests suite v2 Create should fail with empty string id 1`] = `
[
  {
    "extensions": {
      "code": "METADATA_VALIDATION_FAILED",
      "errors": {
        "fieldMetadata": [
          {
            "errors": [
              {
                "code": "INVALID_FIELD_INPUT",
                "message": "Option id is invalid",
                "userFriendlyMessage": "Option id is invalid",
                "value": "",
              },
            ],
            "flatEntityMinimalInformation": {
              "id": Any<String>,
              "name": "testField",
              "objectMetadataId": Any<String>,
              "universalIdentifier": Any<String>,
            },
            "metadataName": "fieldMetadata",
            "status": "fail",
            "type": "create",
          },
        ],
      },
      "message": "Validation failed for 1 fieldMetadata",
      "summary": {
        "fieldMetadata": 1,
        "totalErrors": 1,
      },
      "userFriendlyMessage": "Metadata validation failed",
    },
    "message": "Multiple validation errors occurred while creating fields",
    "name": "GraphQLError",
  },
]
`;

exports[`Failing create field metadata SELECT tests suite v2 Create should fail with empty string label 1`] = `
[
  {
    "extensions": {
      "code": "METADATA_VALIDATION_FAILED",
      "errors": {
        "fieldMetadata": [
          {
            "errors": [
              {
                "code": "INVALID_FIELD_INPUT",
                "message": "Option label must be a string of at least one character",
                "userFriendlyMessage": "Option label format not supported",
                "value": "",
              },
            ],
            "flatEntityMinimalInformation": {
              "id": Any<String>,
              "name": "testField",
              "objectMetadataId": Any<String>,
              "universalIdentifier": Any<String>,
            },
            "metadataName": "fieldMetadata",
            "status": "fail",
            "type": "create",
          },
        ],
      },
      "message": "Validation failed for 1 fieldMetadata",
      "summary": {
        "fieldMetadata": 1,
        "totalErrors": 1,
      },
      "userFriendlyMessage": "Metadata validation failed",
    },
    "message": "Multiple validation errors occurred while creating fields",
    "name": "GraphQLError",
  },
]
`;

exports[`Failing create field metadata SELECT tests suite v2 Create should fail with empty string value 1`] = `
[
  {
    "extensions": {
      "code": "METADATA_VALIDATION_FAILED",
      "errors": {
        "fieldMetadata": [
          {
            "errors": [
              {
                "code": "INVALID_FIELD_INPUT",
                "message": "Option value must be a string of at least one character",
                "userFriendlyMessage": "Option value format not supported",
                "value": "",
              },
            ],
            "flatEntityMinimalInformation": {
              "id": Any<String>,
              "name": "testField",
              "objectMetadataId": Any<String>,
              "universalIdentifier": Any<String>,
            },
            "metadataName": "fieldMetadata",
            "status": "fail",
            "type": "create",
          },
        ],
      },
      "message": "Validation failed for 1 fieldMetadata",
      "summary": {
        "fieldMetadata": 1,
        "totalErrors": 1,
      },
      "userFriendlyMessage": "Metadata validation failed",
    },
    "message": "Multiple validation errors occurred while creating fields",
    "name": "GraphQLError",
  },
]
`;

exports[`Failing create field metadata SELECT tests suite v2 Create should fail with invalid option id 1`] = `
[
  {
    "extensions": {
      "code": "METADATA_VALIDATION_FAILED",
      "errors": {
        "fieldMetadata": [
          {
            "errors": [
              {
                "code": "INVALID_FIELD_INPUT",
                "message": "Option id is invalid",
                "userFriendlyMessage": "Option id is invalid",
                "value": "not a uuid",
              },
            ],
            "flatEntityMinimalInformation": {
              "id": Any<String>,
              "name": "testField",
              "objectMetadataId": Any<String>,
              "universalIdentifier": Any<String>,
            },
            "metadataName": "fieldMetadata",
            "status": "fail",
            "type": "create",
          },
        ],
      },
      "message": "Validation failed for 1 fieldMetadata",
      "summary": {
        "fieldMetadata": 1,
        "totalErrors": 1,
      },
      "userFriendlyMessage": "Metadata validation failed",
    },
    "message": "Multiple validation errors occurred while creating fields",
    "name": "GraphQLError",
  },
]
`;

exports[`Failing create field metadata SELECT tests suite v2 Create should fail with invalid option value format 1`] = `
[
  {
    "extensions": {
      "code": "METADATA_VALIDATION_FAILED",
      "errors": {
        "fieldMetadata": [
          {
            "errors": [
              {
                "code": "INVALID_FIELD_INPUT",
                "message": "Value must be in UPPER_CASE and follow snake_case "Option 1 and some other things, /"",
                "userFriendlyMessage": "Value must be in UPPER_CASE and follow snake_case "Option 1 and some other things, /"",
                "value": "Option 1 and some other things, /",
              },
            ],
            "flatEntityMinimalInformation": {
              "id": Any<String>,
              "name": "testField",
              "objectMetadataId": Any<String>,
              "universalIdentifier": Any<String>,
            },
            "metadataName": "fieldMetadata",
            "status": "fail",
            "type": "create",
          },
        ],
      },
      "message": "Validation failed for 1 fieldMetadata",
      "summary": {
        "fieldMetadata": 1,
        "totalErrors": 1,
      },
      "userFriendlyMessage": "Metadata validation failed",
    },
    "message": "Multiple validation errors occurred while creating fields",
    "name": "GraphQLError",
  },
]
`;

exports[`Failing create field metadata SELECT tests suite v2 Create should fail with not a string defaultValue 1`] = `
[
  {
    "extensions": {
      "code": "METADATA_VALIDATION_FAILED",
      "errors": {
        "fieldMetadata": [
          {
            "errors": [
              {
                "code": "INVALID_FIELD_INPUT",
                "message": "Default value for select must be a string got 22222",
                "userFriendlyMessage": "Default value must be a string",
                "value": 22222,
              },
            ],
            "flatEntityMinimalInformation": {
              "id": Any<String>,
              "name": "testField",
              "objectMetadataId": Any<String>,
              "universalIdentifier": Any<String>,
            },
            "metadataName": "fieldMetadata",
            "status": "fail",
            "type": "create",
          },
        ],
      },
      "message": "Validation failed for 1 fieldMetadata",
      "summary": {
        "fieldMetadata": 1,
        "totalErrors": 1,
      },
      "userFriendlyMessage": "Metadata validation failed",
    },
    "message": "Multiple validation errors occurred while creating fields",
    "name": "GraphQLError",
  },
]
`;

exports[`Failing create field metadata SELECT tests suite v2 Create should fail with not a string id 1`] = `
[
  {
    "extensions": {
      "code": "METADATA_VALIDATION_FAILED",
      "errors": {
        "fieldMetadata": [
          {
            "errors": [
              {
                "code": "INVALID_FIELD_INPUT",
                "message": "Option id is invalid",
                "userFriendlyMessage": "Option id is invalid",
                "value": 22222,
              },
            ],
            "flatEntityMinimalInformation": {
              "id": Any<String>,
              "name": "testField",
              "objectMetadataId": Any<String>,
              "universalIdentifier": Any<String>,
            },
            "metadataName": "fieldMetadata",
            "status": "fail",
            "type": "create",
          },
        ],
      },
      "message": "Validation failed for 1 fieldMetadata",
      "summary": {
        "fieldMetadata": 1,
        "totalErrors": 1,
      },
      "userFriendlyMessage": "Metadata validation failed",
    },
    "message": "Multiple validation errors occurred while creating fields",
    "name": "GraphQLError",
  },
]
`;

exports[`Failing create field metadata SELECT tests suite v2 Create should fail with not a string label 1`] = `
[
  {
    "extensions": {
      "code": "METADATA_VALIDATION_FAILED",
      "errors": {
        "fieldMetadata": [
          {
            "errors": [
              {
                "code": "INVALID_FIELD_INPUT",
                "message": "Option label must be a string of at least one character",
                "userFriendlyMessage": "Option label format not supported",
                "value": 22222,
              },
            ],
            "flatEntityMinimalInformation": {
              "id": Any<String>,
              "name": "testField",
              "objectMetadataId": Any<String>,
              "universalIdentifier": Any<String>,
            },
            "metadataName": "fieldMetadata",
            "status": "fail",
            "type": "create",
          },
        ],
      },
      "message": "Validation failed for 1 fieldMetadata",
      "summary": {
        "fieldMetadata": 1,
        "totalErrors": 1,
      },
      "userFriendlyMessage": "Metadata validation failed",
    },
    "message": "Multiple validation errors occurred while creating fields",
    "name": "GraphQLError",
  },
]
`;

exports[`Failing create field metadata SELECT tests suite v2 Create should fail with not a string value 1`] = `
[
  {
    "extensions": {
      "code": "METADATA_VALIDATION_FAILED",
      "errors": {
        "fieldMetadata": [
          {
            "errors": [
              {
                "code": "INVALID_FIELD_INPUT",
                "message": "Option value must be a string of at least one character",
                "userFriendlyMessage": "Option value format not supported",
                "value": 22222,
              },
            ],
            "flatEntityMinimalInformation": {
              "id": Any<String>,
              "name": "testField",
              "objectMetadataId": Any<String>,
              "universalIdentifier": Any<String>,
            },
            "metadataName": "fieldMetadata",
            "status": "fail",
            "type": "create",
          },
        ],
      },
      "message": "Validation failed for 1 fieldMetadata",
      "summary": {
        "fieldMetadata": 1,
        "totalErrors": 1,
      },
      "userFriendlyMessage": "Metadata validation failed",
    },
    "message": "Multiple validation errors occurred while creating fields",
    "name": "GraphQLError",
  },
]
`;

exports[`Failing create field metadata SELECT tests suite v2 Create should fail with null id 1`] = `
[
  {
    "extensions": {
      "code": "METADATA_VALIDATION_FAILED",
      "errors": {
        "fieldMetadata": [
          {
            "errors": [
              {
                "code": "INVALID_FIELD_INPUT",
                "message": "Option id is required",
                "userFriendlyMessage": "Option id is required",
              },
              {
                "code": "INVALID_FIELD_INPUT",
                "message": "Option id is invalid",
                "userFriendlyMessage": "Option id is invalid",
                "value": null,
              },
            ],
            "flatEntityMinimalInformation": {
              "id": Any<String>,
              "name": "testField",
              "objectMetadataId": Any<String>,
              "universalIdentifier": Any<String>,
            },
            "metadataName": "fieldMetadata",
            "status": "fail",
            "type": "create",
          },
        ],
      },
      "message": "Validation failed for 1 fieldMetadata",
      "summary": {
        "fieldMetadata": 1,
        "totalErrors": 1,
      },
      "userFriendlyMessage": "Metadata validation failed",
    },
    "message": "Multiple validation errors occurred while creating fields",
    "name": "GraphQLError",
  },
]
`;

exports[`Failing create field metadata SELECT tests suite v2 Create should fail with null label 1`] = `
[
  {
    "extensions": {
      "code": "METADATA_VALIDATION_FAILED",
      "errors": {
        "fieldMetadata": [
          {
            "errors": [
              {
                "code": "INVALID_FIELD_INPUT",
                "message": "Option label is required",
                "userFriendlyMessage": "Option label is required",
              },
            ],
            "flatEntityMinimalInformation": {
              "id": Any<String>,
              "name": "testField",
              "objectMetadataId": Any<String>,
              "universalIdentifier": Any<String>,
            },
            "metadataName": "fieldMetadata",
            "status": "fail",
            "type": "create",
          },
        ],
      },
      "message": "Validation failed for 1 fieldMetadata",
      "summary": {
        "fieldMetadata": 1,
        "totalErrors": 1,
      },
      "userFriendlyMessage": "Metadata validation failed",
    },
    "message": "Multiple validation errors occurred while creating fields",
    "name": "GraphQLError",
  },
]
`;

exports[`Failing create field metadata SELECT tests suite v2 Create should fail with null options 1`] = `
[
  {
    "extensions": {
      "code": "METADATA_VALIDATION_FAILED",
      "errors": {
        "fieldMetadata": [
          {
            "errors": [
              {
                "code": "INVALID_FIELD_INPUT",
                "message": "Options are required for enum fields",
                "userFriendlyMessage": "Options are required for enum fields",
                "value": [],
              },
            ],
            "flatEntityMinimalInformation": {
              "id": Any<String>,
              "name": "testField",
              "objectMetadataId": Any<String>,
              "universalIdentifier": Any<String>,
            },
            "metadataName": "fieldMetadata",
            "status": "fail",
            "type": "create",
          },
        ],
      },
      "message": "Validation failed for 1 fieldMetadata",
      "summary": {
        "fieldMetadata": 1,
        "totalErrors": 1,
      },
      "userFriendlyMessage": "Metadata validation failed",
    },
    "message": "Multiple validation errors occurred while creating fields",
    "name": "GraphQLError",
  },
]
`;

exports[`Failing create field metadata SELECT tests suite v2 Create should fail with null value 1`] = `
[
  {
    "extensions": {
      "code": "METADATA_VALIDATION_FAILED",
      "errors": {
        "fieldMetadata": [
          {
            "errors": [
              {
                "code": "INVALID_FIELD_INPUT",
                "message": "Option value is required",
                "userFriendlyMessage": "Option value is required",
              },
            ],
            "flatEntityMinimalInformation": {
              "id": Any<String>,
              "name": "testField",
              "objectMetadataId": Any<String>,
              "universalIdentifier": Any<String>,
            },
            "metadataName": "fieldMetadata",
            "status": "fail",
            "type": "create",
          },
        ],
      },
      "message": "Validation failed for 1 fieldMetadata",
      "summary": {
        "fieldMetadata": 1,
        "totalErrors": 1,
      },
      "userFriendlyMessage": "Metadata validation failed",
    },
    "message": "Multiple validation errors occurred while creating fields",
    "name": "GraphQLError",
  },
]
`;

exports[`Failing create field metadata SELECT tests suite v2 Create should fail with only white spaces defaultValue 1`] = `
[
  {
    "extensions": {
      "code": "METADATA_VALIDATION_FAILED",
      "errors": {
        "fieldMetadata": [
          {
            "errors": [
              {
                "code": "INVALID_FIELD_INPUT",
                "message": "Default value should be as quoted string",
                "userFriendlyMessage": "Default value should be as quoted string",
                "value": "",
              },
              {
                "code": "INVALID_FIELD_INPUT",
                "message": "Default value "" must be one of the option values",
                "userFriendlyMessage": "Default value "" must be one of the option values",
                "value": "",
              },
            ],
            "flatEntityMinimalInformation": {
              "id": Any<String>,
              "name": "testField",
              "objectMetadataId": Any<String>,
              "universalIdentifier": Any<String>,
            },
            "metadataName": "fieldMetadata",
            "status": "fail",
            "type": "create",
          },
        ],
      },
      "message": "Validation failed for 1 fieldMetadata",
      "summary": {
        "fieldMetadata": 1,
        "totalErrors": 1,
      },
      "userFriendlyMessage": "Metadata validation failed",
    },
    "message": "Multiple validation errors occurred while creating fields",
    "name": "GraphQLError",
  },
]
`;

exports[`Failing create field metadata SELECT tests suite v2 Create should fail with only white spaces id 1`] = `
[
  {
    "extensions": {
      "code": "METADATA_VALIDATION_FAILED",
      "errors": {
        "fieldMetadata": [
          {
            "errors": [
              {
                "code": "INVALID_FIELD_INPUT",
                "message": "Option id is invalid",
                "userFriendlyMessage": "Option id is invalid",
                "value": "",
              },
            ],
            "flatEntityMinimalInformation": {
              "id": Any<String>,
              "name": "testField",
              "objectMetadataId": Any<String>,
              "universalIdentifier": Any<String>,
            },
            "metadataName": "fieldMetadata",
            "status": "fail",
            "type": "create",
          },
        ],
      },
      "message": "Validation failed for 1 fieldMetadata",
      "summary": {
        "fieldMetadata": 1,
        "totalErrors": 1,
      },
      "userFriendlyMessage": "Metadata validation failed",
    },
    "message": "Multiple validation errors occurred while creating fields",
    "name": "GraphQLError",
  },
]
`;

exports[`Failing create field metadata SELECT tests suite v2 Create should fail with only white spaces label 1`] = `
[
  {
    "extensions": {
      "code": "METADATA_VALIDATION_FAILED",
      "errors": {
        "fieldMetadata": [
          {
            "errors": [
              {
                "code": "INVALID_FIELD_INPUT",
                "message": "Option label must be a string of at least one character",
                "userFriendlyMessage": "Option label format not supported",
                "value": "",
              },
            ],
            "flatEntityMinimalInformation": {
              "id": Any<String>,
              "name": "testField",
              "objectMetadataId": Any<String>,
              "universalIdentifier": Any<String>,
            },
            "metadataName": "fieldMetadata",
            "status": "fail",
            "type": "create",
          },
        ],
      },
      "message": "Validation failed for 1 fieldMetadata",
      "summary": {
        "fieldMetadata": 1,
        "totalErrors": 1,
      },
      "userFriendlyMessage": "Metadata validation failed",
    },
    "message": "Multiple validation errors occurred while creating fields",
    "name": "GraphQLError",
  },
]
`;

exports[`Failing create field metadata SELECT tests suite v2 Create should fail with only white spaces value 1`] = `
[
  {
    "extensions": {
      "code": "METADATA_VALIDATION_FAILED",
      "errors": {
        "fieldMetadata": [
          {
            "errors": [
              {
                "code": "INVALID_FIELD_INPUT",
                "message": "Option value must be a string of at least one character",
                "userFriendlyMessage": "Option value format not supported",
                "value": "",
              },
            ],
            "flatEntityMinimalInformation": {
              "id": Any<String>,
              "name": "testField",
              "objectMetadataId": Any<String>,
              "universalIdentifier": Any<String>,
            },
            "metadataName": "fieldMetadata",
            "status": "fail",
            "type": "create",
          },
        ],
      },
      "message": "Validation failed for 1 fieldMetadata",
      "summary": {
        "fieldMetadata": 1,
        "totalErrors": 1,
      },
      "userFriendlyMessage": "Metadata validation failed",
    },
    "message": "Multiple validation errors occurred while creating fields",
    "name": "GraphQLError",
  },
]
`;

exports[`Failing create field metadata SELECT tests suite v2 Create should fail with too long defaultValue 1`] = `
[
  {
    "extensions": {
      "code": "METADATA_VALIDATION_FAILED",
      "errors": {
        "fieldMetadata": [
          {
            "errors": [
              {
                "code": "INVALID_FIELD_INPUT",
                "message": "Default value should be as quoted string",
                "userFriendlyMessage": "Default value should be as quoted string",
                "value": "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa",
              },
              {
                "code": "INVALID_FIELD_INPUT",
                "message": "Default value "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa" must be one of the option values",
                "userFriendlyMessage": "Default value "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa" must be one of the option values",
                "value": "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa",
              },
            ],
            "flatEntityMinimalInformation": {
              "id": Any<String>,
              "name": "testField",
              "objectMetadataId": Any<String>,
              "universalIdentifier": Any<String>,
            },
            "metadataName": "fieldMetadata",
            "status": "fail",
            "type": "create",
          },
        ],
      },
      "message": "Validation failed for 1 fieldMetadata",
      "summary": {
        "fieldMetadata": 1,
        "totalErrors": 1,
      },
      "userFriendlyMessage": "Metadata validation failed",
    },
    "message": "Multiple validation errors occurred while creating fields",
    "name": "GraphQLError",
  },
]
`;

exports[`Failing create field metadata SELECT tests suite v2 Create should fail with too long id 1`] = `
[
  {
    "extensions": {
      "code": "METADATA_VALIDATION_FAILED",
      "errors": {
        "fieldMetadata": [
          {
            "errors": [
              {
                "code": "INVALID_FIELD_INPUT",
                "message": "Option id is invalid",
                "userFriendlyMessage": "Option id is invalid",
                "value": "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa",
              },
            ],
            "flatEntityMinimalInformation": {
              "id": Any<String>,
              "name": "testField",
              "objectMetadataId": Any<String>,
              "universalIdentifier": Any<String>,
            },
            "metadataName": "fieldMetadata",
            "status": "fail",
            "type": "create",
          },
        ],
      },
      "message": "Validation failed for 1 fieldMetadata",
      "summary": {
        "fieldMetadata": 1,
        "totalErrors": 1,
      },
      "userFriendlyMessage": "Metadata validation failed",
    },
    "message": "Multiple validation errors occurred while creating fields",
    "name": "GraphQLError",
  },
]
`;

exports[`Failing create field metadata SELECT tests suite v2 Create should fail with too long label 1`] = `
[
  {
    "extensions": {
      "code": "METADATA_VALIDATION_FAILED",
      "errors": {
        "fieldMetadata": [
          {
            "errors": [
              {
                "code": "INVALID_FIELD_INPUT",
                "message": "Option label exceeds 63 characters",
                "userFriendlyMessage": "Option label exceeds 63 characters",
                "value": "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa",
              },
            ],
            "flatEntityMinimalInformation": {
              "id": Any<String>,
              "name": "testField",
              "objectMetadataId": Any<String>,
              "universalIdentifier": Any<String>,
            },
            "metadataName": "fieldMetadata",
            "status": "fail",
            "type": "create",
          },
        ],
      },
      "message": "Validation failed for 1 fieldMetadata",
      "summary": {
        "fieldMetadata": 1,
        "totalErrors": 1,
      },
      "userFriendlyMessage": "Metadata validation failed",
    },
    "message": "Multiple validation errors occurred while creating fields",
    "name": "GraphQLError",
  },
]
`;

exports[`Failing create field metadata SELECT tests suite v2 Create should fail with too long value 1`] = `
[
  {
    "extensions": {
      "code": "METADATA_VALIDATION_FAILED",
      "errors": {
        "fieldMetadata": [
          {
            "errors": [
              {
                "code": "INVALID_FIELD_INPUT",
                "message": "Option value exceeds 63 characters",
                "userFriendlyMessage": "Option value exceeds 63 characters",
                "value": "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa",
              },
              {
                "code": "INVALID_FIELD_INPUT",
                "message": "Value must be in UPPER_CASE and follow snake_case "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa"",
                "userFriendlyMessage": "Value must be in UPPER_CASE and follow snake_case "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa"",
                "value": "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa",
              },
            ],
            "flatEntityMinimalInformation": {
              "id": Any<String>,
              "name": "testField",
              "objectMetadataId": Any<String>,
              "universalIdentifier": Any<String>,
            },
            "metadataName": "fieldMetadata",
            "status": "fail",
            "type": "create",
          },
        ],
      },
      "message": "Validation failed for 1 fieldMetadata",
      "summary": {
        "fieldMetadata": 1,
        "totalErrors": 1,
      },
      "userFriendlyMessage": "Metadata validation failed",
    },
    "message": "Multiple validation errors occurred while creating fields",
    "name": "GraphQLError",
  },
]
`;

exports[`Failing create field metadata SELECT tests suite v2 Create should fail with undefined option label 1`] = `
[
  {
    "extensions": {
      "code": "METADATA_VALIDATION_FAILED",
      "errors": {
        "fieldMetadata": [
          {
            "errors": [
              {
                "code": "INVALID_FIELD_INPUT",
                "message": "Option label is required",
                "userFriendlyMessage": "Option label is required",
              },
            ],
            "flatEntityMinimalInformation": {
              "id": Any<String>,
              "name": "testField",
              "objectMetadataId": Any<String>,
              "universalIdentifier": Any<String>,
            },
            "metadataName": "fieldMetadata",
            "status": "fail",
            "type": "create",
          },
        ],
      },
      "message": "Validation failed for 1 fieldMetadata",
      "summary": {
        "fieldMetadata": 1,
        "totalErrors": 1,
      },
      "userFriendlyMessage": "Metadata validation failed",
    },
    "message": "Multiple validation errors occurred while creating fields",
    "name": "GraphQLError",
  },
]
`;

exports[`Failing create field metadata SELECT tests suite v2 Create should fail with undefined option value 1`] = `
[
  {
    "extensions": {
      "code": "METADATA_VALIDATION_FAILED",
      "errors": {
        "fieldMetadata": [
          {
            "errors": [
              {
                "code": "INVALID_FIELD_INPUT",
                "message": "Option value is required",
                "userFriendlyMessage": "Option value is required",
              },
            ],
            "flatEntityMinimalInformation": {
              "id": Any<String>,
              "name": "testField",
              "objectMetadataId": Any<String>,
              "universalIdentifier": Any<String>,
            },
            "metadataName": "fieldMetadata",
            "status": "fail",
            "type": "create",
          },
        ],
      },
      "message": "Validation failed for 1 fieldMetadata",
      "summary": {
        "fieldMetadata": 1,
        "totalErrors": 1,
      },
      "userFriendlyMessage": "Metadata validation failed",
    },
    "message": "Multiple validation errors occurred while creating fields",
    "name": "GraphQLError",
  },
]
`;

exports[`Failing create field metadata SELECT tests suite v2 Create should fail with undefined options 1`] = `
[
  {
    "extensions": {
      "code": "METADATA_VALIDATION_FAILED",
      "errors": {
        "fieldMetadata": [
          {
            "errors": [
              {
                "code": "INVALID_FIELD_INPUT",
                "message": "Options are required for enum fields",
                "userFriendlyMessage": "Options are required for enum fields",
                "value": [],
              },
            ],
            "flatEntityMinimalInformation": {
              "id": Any<String>,
              "name": "testField",
              "objectMetadataId": Any<String>,
              "universalIdentifier": Any<String>,
            },
            "metadataName": "fieldMetadata",
            "status": "fail",
            "type": "create",
          },
        ],
      },
      "message": "Validation failed for 1 fieldMetadata",
      "summary": {
        "fieldMetadata": 1,
        "totalErrors": 1,
      },
      "userFriendlyMessage": "Metadata validation failed",
    },
    "message": "Multiple validation errors occurred while creating fields",
    "name": "GraphQLError",
  },
]
`;
